# mapeditor

./: .gitignore  CMakeLists.txt  MapEditor.pro  README.md
Project organisation/Agenda/: 0008-mapviewer 29 maart 2016.docx  0008-mapviewer 31 maart 2016.docx
Realisation/MapEditor/: MapEditor.pro  canvas.cpp  canvas.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mapEditor.cpp  mapEditor.hpp  mapView.cpp  mapView.hpp  map_utils.cpp  map_utils.hpp  mapeditor.cpp  mapeditor.hpp  stubs.hpp  viewScene.cpp  viewScene.hpp
Realisation/MapEditor/Maputils/: 2DBoxInfo.cpp  2DBoxInfo.hpp  RectInfo.cpp  RectInfo.hpp  map_utils.cpp  map_utils.hpp  stubs.cpp  stubs.hpp
docs/Project organisation/Notulen/: 0008-mapviewer 29 maart 2016.docx  0008-mapviewer 31 maart 2016.docx
source/: mainwindow.ui  mapeditor - Shortcut.lnk  mapeditor.icns  mapeditor.rc  polarViewTab.ui
source/include/: RectInfo.hpp  mainwindow.hpp  mapEditor.hpp  mapView.hpp  map_utils.hpp  polarviewview.hpp  stubs.hpp  viewScene.hpp
source/include/polarview/: polarViewTab.hpp  polarview.hpp
source/src/: RectInfo.cpp  main.cpp  mainwindow.cpp  mapEditor.cpp  mapView.cpp  map_utils.cpp  polarviewview.cpp  viewScene.cpp
source/src/polarview/: polarViewTab.cpp  polarview.cpp
test/: stonecold.map  testmap1.map  testmap2.map  testmap3.map  testmap4.map  testmap5.map
